给分支里button一个点击事件

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <body>
     	<h1>黑马</h1>
     	<div>新增一个div</div>
+    	<button>按钮</button>
     </body>
+    <script>
+    	var button = document.querySelector('button');
+    	button.onclick = function(){
+    		console.log('分支tree');
+    	}
+    </script>
 </html>
