--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     	<h1>黑马</h1>
     	<div>新增一个div</div>
     	<button>按钮</button>
+    	<p>此时在one的分支里</p>
     </body>
     <script>
     	var button = document.querySelector('button');
