修改p后上传，测试网址命名是否有误

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     	<div>新增一个div</div>
     	<button>按钮</button>
     	<p>此时在one的分支里</p>
+    	<p>给网址重新取名remote</p>
     </body>
     <script>
     	var button = document.querySelector('button');
